--- a/4.-grid/main.css
+++ b/4.-grid/main.css
@@ -377,7 +377,7 @@ body {
 
 
 
-/******************** Alineamiento & order *******************************/
+/******************** Alineamiento & order 
 body {
     display: flex;
     align-items: center;
@@ -412,4 +412,51 @@ body {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-gap: 15px;
+}
+*******************************/
+
+
+/******************** Shorthands y grid track *******************************/
+body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 0;
+    height: 100vh;
+    color: #eee;
+    font-family: sans-serif;
+    background-image: radial-gradient(circle, #b94bf8, #3a1957);
+    background-repeat: no-repeat;
+}
+
+.grid-container {
+    display: grid;
+    grid-template: 100px 200px 150px / 300px 250px 150px;
+    /*grid-template: 
+        "first first first" 100px
+        "center center center" 200px
+        "last . ." 150px / 300px 250px
+    ;*/
+    grid: 
+        "first first first" 100px
+        "center center center" 200px
+        "last . ." 150px / 300px 250px
+    ;
+    
+}
+
+.grid-item {
+    border: 1px solid;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 1rem 1.5rem;
+    font-size: 2rem;
+    color: #000;
+}
+
+.grid-item:first-child,
+.grid-item:nth-child(4),
+.grid-item:nth-child(7){
+    background-color: limegreen;
 }
