--- a/5.-grid/grid.css
+++ b/5.-grid/grid.css
@@ -170,3 +170,181 @@ html {
 .footer {
     grid-area: footer;
 }
+
+
+/**************************** Grid Implícita (Grids de bloque y de línea) *****************************/
+.grid-implicit {
+  display: grid; /* Modelo Bloque */
+  display: inline-grid; /* Modelo inline */
+  /* Grid de 4cx3r*/
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(3, 120px);
+}
+
+
+/**************************** Flujo de la Grid (Grid Flow) *****************************/
+.grid-flow {
+  display: grid;
+  /* Grid de 5cx3r*/
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(3, 100px);
+  grid-auto-flow: row; /*Semejante al flex direction*/
+  grid-auto-rows: 100px; /*da tamaño al grid que no tiene alcance: auto | 100px*/
+  grid-auto-flow: column;
+  grid-auto-columns: 50px;
+}
+
+
+/**************************** Flujo Denso de la Grid (Grid Flow Dense) *****************************/
+.grid-flow-dense {
+  display: grid;
+  /* Grid de 5cx4r*/
+  grid-template-columns: repeat(5, 1fr);
+  grid-template-rows: repeat(4, 100px);
+  grid-auto-flow: row dense; /*Rellena los espacios en blanco*/
+  /*grid-auto-flow: column;*/
+}
+
+.grid-flow-dense .item:nth-child(9){
+  color: cyan;
+  grid-row: span 3;
+  grid-column: span 3;
+}
+
+
+/**************************** Grid Layers: Celdas en capas (superposición) *****************************/
+.grid-layers {
+  display: grid;
+  /* Grid de 4cx4r*/
+  grid-template-columns: repeat(4,1fr);
+  grid-template-rows: repeat(4,1fr);
+}
+
+.grid-layers .item:nth-child(1){
+  background-color: #dbea33;
+  grid-column: 1/3;
+  grid-row: 1/3;
+}
+
+.grid-layers .item:nth-child(2){
+  background-color: #497af8;
+  grid-column: 3/5;
+  grid-row: 1/3;
+}
+
+.grid-layers .item:nth-child(3){
+  background-color: #90e971;
+  grid-column: 1/3;
+  grid-row: 3/5;
+}
+
+.grid-layers .item:nth-child(4){
+  background-color: #f0952a;
+  grid-column: 3/5;
+  grid-row: 3/5;
+}
+
+.grid-layers .item:nth-child(5){
+  background-color: #f0952a;
+  opacity: 0.75;
+  grid-column: 2/4;
+  grid-row: 2/4;
+}
+
+
+/**************************** Orden de Grid Items *****************************/
+.grid-order {
+  display: grid;
+  /* Grid de 3cx2r*/
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+}
+
+.grid-order .item.item:nth-child(1){
+  order: 1; /* valor por default es 0, acepta valores negativos y positivos*/
+}
+
+.grid-order .item.item:nth-child(2){
+  order: 2;
+}
+
+.grid-order .item.item:nth-child(5){
+  order: -1;
+}
+
+
+/**************************** Alineación de Grid Items *****************************/
+.grid-align {
+  display: grid;
+  /* Grid de 3cx2r*/
+  grid-template-columns: repeat(3, 200px);
+  grid-template-rows: repeat(2, 200px);
+  /* justify-items alinea mis elementos grid en el eje horizontal (X) */
+  justify-items: stretch; /*valor por defecto: stretch*/
+  justify-items: start;
+  justify-items: end;
+  justify-items: center;
+  /* justify-items alinea mis elementos grid en el eje vertical (Y) */
+  align-items: stretch;
+  align-items: start; /*Ocupa solo el espacio de su contenido*/
+  align-items: end;
+  align-items: center;
+}
+
+.grid-align .item:nth-child(4){
+  justify-self: start;
+  align-self: start;
+}
+
+
+/**************************** Alineación de Grid Tracks *****************************/
+.grid-align-tracks {
+  display: grid;
+  /* Grid de 3cx2r */
+  grid-template-columns: repeat(3, 200px);
+  grid-template-rows: repeat(2, 200px);
+  /* justify-content alinea los tracks de la grid en el eje horizontal (X) */
+  justify-content: start;
+  justify-content: end;
+  justify-content: center;
+  justify-content: space-between;
+  justify-content: space-around;
+  justify-content: space-evenly;
+  /* align-content alinea los tracks de la grid en el eje vertical (Y) */
+  align-content: start;
+  align-content: end;
+  align-content: center;
+  align-content: space-between;
+  align-content: space-around;
+  align-content: space-evenly;
+}
+
+
+/**************************** Tamaños Máximos y Mínimos de Grid Tracks *****************************/
+.grid-min-max {
+  display: grid;
+  /* Grid de 4cx?r */
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-columns: repeat(4, minmax(100px, 200px));
+  grid-template-columns: repeat(4, minmax(min-content, 200px)); /*min-content: Al minimo contenido que tenga*/
+  grid-template-columns: repeat(4, minmax(100px, min-content));
+  grid-template-columns: repeat(4, minmax(100px, max-content));
+  grid-template-columns: repeat(4, minmax(max-content, 200px));
+  grid-template-columns: repeat(4, minmax(min-content, max-content));
+}
+
+
+/**************************** Grids con Patrones Repetitivos *****************************/
+.grid-repeat {
+  display: grid;
+  /* Grid de 4cx4r */
+  grid-template-columns: repeat(4, 10% 20% 30% 40%);
+  grid-template-columns: repeat(3, 10% 20% 30% 40%);
+  grid-template-columns: repeat(2, 10% 20% 30% 40%);
+  grid-template-columns: repeat(1, 10% 20% 30% 40%);
+  grid-template-rows: repeat(2, 80px 100px);
+  grid-auto-rows: 120px;
+}
+
+
+/**************************** Grids Dinámicas. Responsive sin Media Queries *****************************/
