--- a/5.-grid/grid.css
+++ b/5.-grid/grid.css
@@ -59,6 +59,12 @@ html {
     border: medium solid #999;
 }
 
+.sub-item {
+  padding: 1rem;
+  background-color: #ddd;
+  border: medium solid #ccc;
+}
+
 
 
 /**************************** Grid Explicita *****************************/
@@ -347,4 +353,62 @@ html {
 }
 
 
-/**************************** Grids Dinámicas. Responsive sin Media Queries *****************************/
+/**************************** Grids Dinámicas *****************************/
+.grid-dynamics {
+  display: grid;
+  /* Grid de 4cx?r */
+  grid-template-columns: repeat(4, 100px);
+  /* auto-fill Rellena la grid con tracks generados dinamicamente */
+  grid-template-columns: repeat(auto-fill, 100px); /* auto-fill => auto relleno => no rellena la cuadricula*/
+  /*auto-fit Ajusta la grid con los tracks existentes */
+  grid-template-columns: repeat(auto-fit, 100px); /* auto-fit => auto ajusta => rellena la cuadricula*/
+  grid-template-columns: repeat(auto-fill, minmax(100px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(100px, 1fr));
+}
+
+
+/**************************** Responsive sin Media Queries *****************************/
+.grid-responsive {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+}
+
+
+/**************************** Grids Anidadas *****************************/
+.grid-nested {
+  display: grid;
+  /* Grid de 3cx?r*/
+  grid-template-columns: repeat(3, 1fr);
+}
+
+
+/**************************** Subgrids *****************************/
+.grid {
+  display: grid;
+  /* Grid de 3cx4r */
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+}
+
+.subgrid {
+  /*Para que la caracteristica de subgrid funcione es necesario hacer los siguiente: 
+  1) Difinir explicitamente el tamaño que ocupara el elemento que aplicara subgrid dentro del contenedor padre grid,
+  es decir definir sus propiedades grid-column y grid-row
+  2) Aplicar display grid al elemento que aplicara subgrid
+  3) Aplicar el valor de subgrid a las columnas, a las filas o ambas depende de como se requiera
+  */
+  grid-column: span 3;
+  grid-row: 1/3;
+  display: grid;
+  grid-template-columns: subgrid;
+  grid-template-rows: subgrid;
+}
+
+
+
+/*
+Pagina que verifica el soporte de los navegadores de css y html
+
+https://caniuse.com/
+
+*/
